--- a/core/lib/js/jscalendar/jscalendar.css
+++ b/core/lib/js/jscalendar/jscalendar.css
@@ -81,6 +81,7 @@ div.calendar {
 	color: #000;
 	text-align: right;
 	padding: 2px 4px 2px 2px;
+	border: 1px dotted #818181;
 }
 .calendar tbody .day.othermonth {
 	font-size: 80%;
@@ -105,9 +106,8 @@ div.calendar {
 }
 
 .calendar tbody td.hilite { /* Hovered cells <TD> */
-	background: #E4EACE;
-	padding: 1px 3px 1px 1px;
-	border: 1px solid #bbb;
+	background: #316AC5;
+	color: #fff;
 }
 
 .calendar tbody td.active { /* Active (pressed) cells <TD> */
@@ -117,7 +117,6 @@ div.calendar {
 
 .calendar tbody td.selected { /* Cell showing today date */
 	font-weight: bold;
-	border: 1px solid #000;
 	padding: 1px 3px 1px 1px;
 	background: #fff;
 	color: #000;
@@ -131,6 +130,11 @@ div.calendar {
 	font-weight: bold;
 	color: #000;
 	background-color:#E4EACE;
+}
+
+.calendar tbody td.selected {
+	background-color: #D3D9BF;
+	font-weight: normal;
 }
 
 .calendar tbody .disabled { color: #999; }
