* fixed installer (removed not more used static data, temporary deactivated db analyzer)

--- a/install/view/importstatic.tmpl
+++ b/install/view/importstatic.tmpl
@@ -9,6 +9,10 @@
 			<span class="label">Import static database data</span>
 			<span class="rgt"></span>
 		</button>
+		<!--<button type="submit" onmousedown="skipDataImport();">
+			<span class="label">Skip data import, i am updating</span>
+			<span class="rgt"></span>
+		</button>-->
 		<input type="hidden" name="action" value="importstatic">
 	</form>
 </div>
