* renamed installer view templates with leading step number * implemented tables.sql analysis and results updating in installer/ updater * implemented beta1 -> beta2 updates in installer

--- a/install/view/10_dbchanges.tmpl
+++ b/install/view/10_dbchanges.tmpl
@@ -16,14 +16,15 @@
 					</li>
 				{/foreach}
 			</ul>
+			{if count($diffs) == 0}Congratulations! your database is up to date.{/if}
 		</div> 
 	</div>
 	<form method="post">
 		<button type="submit">
-			<span class="label">Perform Database updates</span>
+			<span class="label">Finish update</span>
 			<span class="rgt"></span>
 		</button>
-		<input type="hidden" name="action" value="start">
+		<input type="hidden" name="action" value="finishupdate">
 	</form>
 </div>
 {/block}
