* installer / updater refinements

--- a/install/view/04_dbselect.tmpl
+++ b/install/view/04_dbselect.tmpl
@@ -22,7 +22,7 @@
 	      </tr>
 	    </table>
 		<button type="submit">
-			<span class="label">Select Database</span>
+			<span class="label">Set Database</span>
 			<span class="rgt"></span>
 		</button>
 		<input type="hidden" name="action" value="dbselect">
