* Translated footer, fixed links

--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -2,9 +2,13 @@
 	<div class="inner">
 		<div id="footer-line"></div>
 		<div id="footer-info">
-			Version: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
-			<a href="http://www.todoyu.com/de/community/forum/" target="_blank">Report a bug to the community</a><br />
-			Documentation: <a href="http://www.todoyu.com/de/doc/user/" target="_blank">User</a> | <a href="http://www.todoyu.com/de/doc/api/" target="_blank">API</a>
+			{Label core.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
+			<a href="http://feedback.todoyu.com/" target="_blank" title="{Label core.footer.bugreport.title}">{Label core.footer.bugreport}</a> |
+			<a href="http://www.todoyu.com/de/community/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
+			Documentation:
+			<a href="http://www.todoyu.com/index.php?id=128" target="_blank" title="{Label core.footer.usermanual.title}">{Label core.footer.usermanual}</a> |
+			<a href="http://www.todoyu.com/apidoc/" target="_blank" title="{Label core.footer.api.title}">{Label core.footer.api}</a> |
+			<a href="http://www.todoyu.com/index.php?id=126" target="_blank" title="{Label core.footer.devmanual.title}">{Label core.footer.devmanual}</a>
 		</div>
 		<div id="footer-logo">
 			<a href="http://www.todoyu.com" target="_blank"><img src="core/assets/img/logo.png" alt="Todoyu" width="85" height="60" border="0" /></a>
