--- a/core/assets/css/button.css
+++ b/core/assets/css/button.css
@@ -1,3 +1,6 @@
+/* ---------------------------
+	Basic button styles
+   ---------------------------*/
 button {
 	position:relative;
 	background:url('../img/bg_button.png') no-repeat 0 50%;
@@ -6,52 +9,47 @@ button {
 	border:0px none !important;
 	color:#000;
 }
-button .icon {
-	background-repeat:no-repeat;
-}
 
 *+html button {
 	position:relative;
 }
 
-.headerLine button span,
 button span {
+	display:block;
 	float:left;
+	clear:none;
 	margin:0;
-	padding:0 0 0 13px;
-	color:#000;
-	font-size:11px;
 	line-height:23px;
-	white-space:nowrap;
-}
-
-button span.hasIcon {
-	padding:0 0 0 30px;
-	background-repeat:no-repeat;
-	background-position:8px 0;
 }
 
 button span.icon {
 	margin:3px 2px 0 8px;
 	padding:0;
-}
-button span.label {
-	white-space:nowrap;
-	margin-left:10px;
-	margin-right:3px;
-	padding:0;
+	background-repeat:no-repeat;
 }
 
-.headerLine button span.rgt,
-button span.rgt {
-	display:block;
-	position:relative;
-	left:3px;
-	margin:0;
+button span.label {
+	white-space:nowrap;
+	margin-left:5px;
+	margin-right:3px;
 	padding:0;
-	background:#fff url('../img/bg_button.png') no-repeat 100% 50%;
+	white-space:nowrap;
+}
+
+button span.rgt {
 	width:10px;
 	height:23px;
+	line-height:23px;
+	background:#FFF url(../img/bg_button.png) no-repeat 100% 50% !important;
+	position:relative;
+	left:3px;
+}
+
+.headerLine button span.rgt {
+	margin-top:2px;
+	height:23px;
+	position:relative;
+	background-color:#E7E7E7 !important;
 }
 
 html>/**/body button span.rgt { /* IE8 */
@@ -70,51 +68,13 @@ html>/**/body button span.rgt { /* IE8 */
 	margin:0px;
 }
 
-/*
-	button span.hasIcon {
-		background-image:url('../img/bg_button_sprite.png');
-	}
 
 
-	button span.iconSave {
-		background-position:8px 0;
-	}
-*/
-
-
-
-/* spezial button */
-/*
-button.button {
-	border:0;
-	border:1px solid #fff !important;
-	background:url(../img/sprite-content.png) repeat-x 0 0px;
-	cursor:pointer;
-}
-
-button.button span {
-	display:block;
-	margin:0 -2px;
-	padding:2px 0 1px;
-	color:#fff;
-	font-size:10px;
-	text-transform:uppercase;
-	white-space:nowrap;
-}
-*/
-
-/*
-button.save {
-	margin-left:260px;
-}
-*/
-
+/* ---------------------------
+	Often used button icons
+   ---------------------------*/
 button.save .icon {
 	background:url(../img/icons.png) no-repeat 0 -209px;
-}
-
-div.fField button.save {
-	margin-left:180px;
 }
 
 button.cancel .icon {
@@ -131,191 +91,9 @@ button.expandAll .icon {
 }
 
 
-/*
-button.save span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -160px;
-}
-
-button.saveAndClose span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -344px;
-}
-
-button.saveAndNew span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -377px;
-}
-
-button.cancel span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -224px;
-}
-
-button.datasheet span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -192px;
-}
-
-button.exportOdt span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -128px;
-}
-
-button.exportPdf span {
-	padding-right:20px;
-	padding-left:30px;
-	background:url(../img/sprite-button_icons.png) no-repeat 0 -64px;
-}
-*/
-/* spezial input.buttons */
-input.button {
-	padding:2px 0 1px;
-	border:0;
-	color:#fff;
-	font-size:10px;
-	text-transform:uppercase;
-	background:url(../img/sprite-content.png) repeat-x 0 0px;
-	cursor:pointer;
-}
-
-input.buttonCreate {
-	padding:2px 11px 2px 25px;
-	background:url(../img/buttons/button_create_bg.png) no-repeat 0 0;
-}
-
-input.buttonSaveReload {
-	padding:2px 11px 1px 36px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -633px;
-}
-
-input.buttonSearch {
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -144px;
-}
-
-input.buttonPreset {
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -416px;
-}
-
-input.buttonGraph {
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -441px;
-}
-
-input.buttonPrint {
-	padding:2px 11px 1px 35px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -585px;
-}
-
-input.buttonRefresh {
-	padding:2px 11px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -609px;
-}
-
-input.buttonShowAll {
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -144px;
-}
-
-#panel input.playButton,
-#panel input.stopButton {
-	position:absolute;
-	right:8px;
-	top:2px;
-	height:18px;
-	width:19px;
-	text-indent:-9999px;
-}
-
-input.manageBookmarkButton {
-	margin:4px 0 6px 0;
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-left_col-portal.png) no-repeat 0 -232px;
-}
-
-input.addCommentButton, button.addCommentButton {
-	margin:4px 0 4px 0;
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -72px;
-}
-
-input.toggleOrder, button.toggleOrder {
-	margin:4px 0 4px 0;
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -316px;
-}
-
-input.sortChronoDesc, button.sortChronoDesc {
-	margin:4px 0 4px 0;
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -341px;
-}
-
-input.sortChronoAsc, button.sortChronoAsc {
-	margin:4px 0 4px 0;
-	padding:2px 11px 1px 25px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -366px;
-}
-
-.todoyurendertask_addcommentbutton {
-	cursor:pointer;
-}
-
-input.exportButton {
-	padding:2px 11px 1px 31px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -264px;
-}
-
-	/* asset buttons */
-input.uploadSingleButton {
-	padding:2px 10px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -561px;
-}
-
-input.downloadArchiveButton {
-	padding:2px 10px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -512px;
-}
-
-input.deleteAssetButton {
-	padding:2px 10px 1px 24px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -537px;
-}
-
-input.emailSendButton {
-	padding:2px 10px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -240px;
-}
-
-input.cancelButtonSmall, input.inlinetaskform_cancelButton {
-	padding:2px 17px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -48px;
-}
-
-input.buttonToggleCustSel {
-	padding:2px 4px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -216px;
-}
-
-input.buttonToggleCustSel {
-	padding:2px 4px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -216px;
-}
-
-input.buttonAddQuicktask {
-	padding:2px 4px 1px 22px;
-	background:url(../img/sprite-button_bgs.png) no-repeat 0 -657px;
-}
-
-span.uploadFileIcon {
-	padding:0 0 0 20px;
-	background:url(../img/sprite-icons.png) no-repeat 8px -1265px;
+/* ---------------------------
+	Center save buttons
+   ---------------------------*/
+div.typeSaveButton div.fField {
+	padding-left:180px;
 }
