--- a/core/view/form/FormElement_Select.tmpl
+++ b/core/view/form/FormElement_Select.tmpl
@@ -3,7 +3,7 @@
 {block name="field"}
 <select name="{$htmlName}" id="{$htmlId}" class="{$inputClass} {$class}" size="{$size}" {if $multiple}multiple="multiple"{/if} {$extraAttributes}>
 {foreach $options option}
-	<option value="{$option.value}" {if in_array($option.value, $default)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
+	<option value="{$option.value}" {if in_array($option.value, $value)}selected="selected"{/if} {if $option.disabled}disabled="disabled"{/if}>{$option.label}</option>
 {/foreach}
 </select>
 {/block}
