--- a/core/assets/css/form.css
+++ b/core/assets/css/form.css
@@ -489,3 +489,12 @@ div.typeSaveButton button span.rgt {
 	background-color:#E7E7E7 !important;
 }
 
+
+
+
+
+.calendaricon {
+	background:url('../img/icons.png') no-repeat 0 -690px;
+}
+
+
