--- a/core/view/footer.tmpl
+++ b/core/view/footer.tmpl
@@ -3,7 +3,7 @@
 		<div id="footer-line"></div>
 		<div id="footer-info">
 			{Label core.footer.version}: {constant(TODOYU_VERSION)}, {constant(TODOYU_UPDATE)}<br />
-			<a href="http://feedback.todoyu.com/" target="_blank" title="{Label core.footer.bugreport.title}">{Label core.footer.bugreport}</a> |
+			<a href="http://bugs.todoyu.com/" target="_blank" title="{Label core.footer.bugreport.title}">{Label core.footer.bugreport}</a> |
 			<a href="http://www.todoyu.com/de/community/forum/" target="_blank" title="{Label core.footer.forum.title}">{Label core.footer.forum}</a><br />
 			Documentation:
 			<a href="http://www.todoyu.com/index.php?id=128" target="_blank" title="{Label core.footer.usermanual.title}">{Label core.footer.usermanual}</a> |
