--- a/core/assets/css/content.css
+++ b/core/assets/css/content.css
@@ -167,3 +167,8 @@ div.title {
 span.infoIcon {
 	background:url('../img/sprite-icons.png') no-repeat -60px -330px !important;
 }
+
+
+.calendaricon {
+	background:url('../img/icons.png') no-repeat 0 -690px;
+}
