--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -3,12 +3,16 @@
 		<label for="{$htmlId}" id="{$htmlId}-label">{Label $label}</label>
 		{if $required}<span class="required">*</span>{/if}
 	</div>
-	<div id="formElement-{$htmlId}-inputbox" class="fField">
+	<div id="formElement-{$htmlId}-inputbox" class="fField{if $wizard.hasWizard} hasWizard{/if}">
 		{block name="field"}
 			This part should be replaced by your field template
 		{/block}
 		{if $error && $errorMessage}<span class="errorMessage">{Label $errorMessage}</span>{/if}
-		{if $wizard.hasWizard}<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>{/if}
+		
+		{if $wizard.hasWizard}
+			<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>
+			<div class="clear"></div>
+		{/if}
 	</div>
 	<div class="fClear"><!-- --></div>
 </div>
