--- a/core/view/form/FormElement.tmpl
+++ b/core/view/form/FormElement.tmpl
@@ -7,8 +7,8 @@
 		{block name="field"}
 			This part should be replaced by your field template
 		{/block}
-		{if $error && $errorMessage}<span class="errorMessage">{Label $errorMessage}</span>{/if}
-		
+		{if $error && $errorMessage}<span class="errorMessage">{Label $errorMessage plain=true}</span>{/if}
+
 		{if $wizard.hasWizard}
 			<span title="{Label $wizard.wizardConf.title}" class="wizardIcon {$wizard.wizardConf.htmlClass}" onclick="Todoyu.Form.openWizard('{$wizard.wizardConf.idRecord}', '{$htmlId}', '{$wizard.wizardConf.ext}', '{$wizard.wizardConf.controller}', '{$wizard.wizardConf.action}', '{$wizard.wizardConf.height}', '{$wizard.wizardConf.width}', '{Label $wizard.wizardConf.title true}');"></span>
 			<div class="clear"></div>
