--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>Todoyu Installer</title>
-	<link href="assets/style.css" rel="stylesheet" type="text/css" />
+	<title>Todoyu Installer</title>		
+	<link href="assets/css/todoyu-installer.css" rel="stylesheet" type="text/css" />
 	<link rel="shortcut icon" href="../favicon.ico" />
-	<script language="javascript" type="text/javascript" src="assets/scripts.js"></script>
+	<script language="javascript" type="text/javascript" src="../lib/js/prototype.js"></script>
+	<script language="javascript" type="text/javascript" src="assets/js/TodoyuInstaller.js"></script>
 </head>
-
 	<body>
 		<div id="box">
 			<div id="panel">
@@ -25,6 +25,7 @@
 					</div>
 				</div>
 				<div id="footer">
+					{*include "../../core/view/footer.tmpl"*}
 					{include "footer.tmpl"}
 				</div>
 			</div>
