* further installer / updater refinements

--- a/install/view/09_welcometoupdate.tmpl
+++ b/install/view/09_welcometoupdate.tmpl
@@ -6,7 +6,7 @@
 
 	<div class="{$textclass}">Update steps:
 		<ul>
-			<li>Changes to DB structures since your currently installed version
+			<li>General update: Changes to DB structures since your currently installed version ({$version.versionnumber})
 				(<a id="toggler" href="javascript:void(0)" class="toggler" onclick="TodoyuInstaller.toggle('toggler', 'sqlUpdateQueries')">View SQL</a>)<br />
 				<div id="sqlUpdateQueries" style="display:none;">
 					{foreach $includedSqlUpdates sqlUpdate}
@@ -17,7 +17,7 @@
 					{/foreach}					
 				</div>
 			</li>
-			<li>Check for extensions' newly added DB tables and columns</li>
+			<li>DB-Analyzer: Check for extensions' newly added DB tables and columns</li>
 		</ul> 
 	</div>
 	<form method="post">
