--- a/install/view/05_importstatic.tmpl
+++ b/install/view/05_importstatic.tmpl
@@ -1,43 +1,30 @@
 {extends main.tmpl}
 
-{block name="box"}
-<h1><span class="title">{$title}</span><span class="rgt"></span></h1>
-<div class="blockcontent">
-	<p  class="text textSuccess">DB connection is stored, import static data now.</p>
-	
-	<div class="{$textclass}">
+{block name="box"}	
+	<div class="">
 		<div class="sqlQuery">
 			<br/>&nbsp;<strong>TODOYU CORE DATABASE TABLES:</strong><br/>
 			<ul>				
-				{foreach $coreStructure dbTable columns}
-					<li>
-						<strong>{$dbTable}:</strong>
-						{foreach $columns.columns columnName columnProps}
-							<pre>{$columnProps.query}</pre>
-						{/foreach}					
-					</li>
-				{/foreach}
+			{foreach $coreStructure dbTable columns}
+				<li>
+					<strong>{$dbTable}:</strong>
+				{foreach $columns.columns columnName columnProps}
+						<pre>{$columnProps.query}</pre>
+				{/foreach}					
+				</li>
+			{/foreach}
 			</ul>
 			<br/>&nbsp;<strong>TODOYU EXTENSIONS DATABASE TABLES:</strong><br/>
 			<ul>
-				{foreach $extStructure dbTable columns}
-					<li>
-						<strong>{$dbTable}:</strong>
-						{foreach $columns.columns columnName columnProps}
-							<pre>{$columnProps.query}</pre>
-						{/foreach}					
-					</li>
+			{foreach $extStructure dbTable columns}
+				<li>
+					<strong>{$dbTable}:</strong>
+				{foreach $columns.columns columnName columnProps}
+						<pre>{$columnProps.query}</pre>
+				{/foreach}					
+				</li>
 				{/foreach}
 			</ul>
 		</div> 
 	</div>
-	
-	<form method="post">
-		<button type="submit">
-			<span class="label">Import static database data</span>
-			<span class="rgt"></span>
-		</button>
-		<input type="hidden" name="action" value="importstatic">
-	</form>
-</div>
 {/block}
