--- a/install/view/01_welcome.tmpl
+++ b/install/view/01_welcome.tmpl
@@ -3,10 +3,10 @@
 {block name="box"}
 	<div class="{$textclass}">Installation steps:
 		<ul>
-			<li>Checks the server compatibility</li>
-			<li>Sets up the database connection</li>
-			<li>Imports static data</li>
-			<li>Sets a new admin password</li>
+			<li>Check the server compatibility</li>
+			<li>Setup of database connection</li>
+			<li>Import static data</li>
+			<li>Set administrator password</li>
 		</ul> 
 	</div>
 {/block}
