--- a/install/view/02_servercheck.tmpl
+++ b/install/view/02_servercheck.tmpl
@@ -9,21 +9,25 @@
 			<td>{if $phpversionStatus == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
 		</tr>
 		<tr>
-			<td valign="top">Folder/files writable</td>
-			{foreach $writable file status iteration}
-	    	 {if $.foreach.iteration.first}
-		    	 <td>- /{$file}: </td>
-		    	 <td><strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
-		    	 <td>{if $status == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
-	    	 </tr>
-	    	 {else}
-	    	 <tr>
-	    	 	<td></td>
-	    	 	<td>- /{$file}:</td>
-	    	 	<td> <strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
-	    	 	 <td>{if $status == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
-	    	 </tr>
-	    	 {/if}
-	    {/foreach}
+			<td valign="top">Folders / files writable</td>
+	{foreach $writable file status iteration}
+		{if $.foreach.iteration.first}
+			 <td>&bull; /{$file}: </td>
+			<td><strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
+			<td>{if $status == 'OK'}
+				<span class="servercheckicon ok"></span>{else}
+				<span class="servercheckicon problem"></span>
+				{/if}
+			</td>
+		</tr>
+		{else}
+		<tr>
+			<td></td>
+			<td>&bull; /{$file}:</td>
+			<td><strong>{if $status}writable{else}NOT WRITABLE{/if}</strong></td>
+			<td>{if $status == 'OK'}<span class="servercheckicon ok"></span>{else}<span class="servercheckicon problem"></span>{/if}</td>
+		</tr>
+		{/if}
+	{/foreach}
 	</table>
 {/block}
