--- a/install/view/03b_dbconnectioncheck.tmpl
+++ b/install/view/03b_dbconnectioncheck.tmpl
@@ -1,6 +1,10 @@
 {extends main.tmpl}
 
 {block name="box"}
+		{if $hasError == 1}
+			<strong>Please correct the Database connection setup below:</strong>
+			<br /><br />
+		{/if}
 		<table width="500" border="0" cellspacing="0" cellpadding="3">
 			<tr>
 				<td width="109">Server</td>
