--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -40,10 +40,7 @@
 						</form><br />
 					</div>
 				</div>
-				<div id="footer">
-					{*include "../../core/view/footer.tmpl"*}
-					{include "footer.tmpl"}
-				</div>
+				<div id="footer">{include "footer.tmpl"}</div>
 			</div>
 		</div>
 	</body>
