--- a/install/view/main.tmpl
+++ b/install/view/main.tmpl
@@ -31,7 +31,7 @@
 							<div class="blockcontent">{block name="box"}{/block}</div>
 							{* ----------- submit: goto next step -------- *}
 							{if $next}
-								<button type="submit">
+								<button id="submit" type="submit">
 									<span class="label">{$buttonLabel}</span>
 									<span class="rgt"></span>
 								</button>
