* Removed Todoyu::getVersionData() * Updated TodoyuDatabase::getTables() mysql_list_tables was deprecated * Implemented clean version update sql handling * Removed version variabled, use constants in template * Fixed link to bugtracker * Fixed task order in portal (only subgroups were sorted) * Removed functionless link for taskuser

--- a/install/view/10_dbchanges.tmpl
+++ b/install/view/10_dbchanges.tmpl
@@ -1,7 +1,7 @@
 {extends main.tmpl}
 
 {block name="box"}
-	<div class="{$textclass}">Version {$version.versionnumber} includes the following database updates:
+	<div class="{$textclass}">Version {constant(TODOYU_VERSION)} includes the following database updates:
 		<div class="sqlQuery">
 			<ul>
 			{foreach $diffs dbTable columns}
@@ -9,11 +9,11 @@
 					<strong>{$dbTable}:</strong>
 				{foreach $columns.columns columnName columnProps}
 						<pre>{$columnProps.query}</pre>
-				{/foreach}					
+				{/foreach}
 				</li>
 			{/foreach}
 			</ul>
 			{if count($diffs) == 0}Congratulations! your database is up to date.{/if}
-		</div> 
+		</div>
 	</div>
 {/block}
