--- a/install/view/09_welcometoupdate.tmpl
+++ b/install/view/09_welcometoupdate.tmpl
@@ -3,18 +3,18 @@
 {block name="box"}
 	<div class="{$textclass}">Update steps:
 		<ul>
-			<li>General update: Changes to DB structures since your currently installed version ({$version.versionnumber})
+			<li>General update: Changes to DB structures since your currently installed version ({constant(TODOYU_VERSION)})
 				(<a id="toggler" href="javascript:void(0)" class="toggler" onclick="TodoyuInstaller.toggle('toggler', 'sqlUpdateQueries')">View SQL</a>)<br />
-				<div id="sqlUpdateQueries" style="display:none;">
-					{foreach $includedSqlUpdates sqlUpdate}
+				<div id="sqlUpdateQueries" style="display:none">
+					{foreach $sqlUpdates sqlUpdate}
 						<br />{$sqlUpdate.title}:
 						<div class="sqlQuery">
 							<pre>{include file=$sqlUpdate.file}</pre>
 						</div>
-					{/foreach}					
+					{/foreach}
 				</div>
 			</li>
 			<li>DB-Analyzer: Check for extensions' newly added DB tables and columns</li>
-		</ul> 
+		</ul>
 	</div>
 {/block}
