* further installer refinements

--- a/install/view/01_welcome.tmpl
+++ b/install/view/01_welcome.tmpl
@@ -3,8 +3,8 @@
 {block name="box"}
 	<div class="{$textclass}">Installation steps:
 		<ul>
-			<li>Check the server compatibility</li>
-			<li>Setup of database connection</li>
+			<li>Check server compatibility</li>
+			<li>Database connection setup</li>
 			<li>Import static data</li>
 			<li>Set administrator password</li>
 		</ul> 
