* further installer cleanup, fixes, refinements

--- a/install/view/07_adminpassword.tmpl
+++ b/install/view/07_adminpassword.tmpl
@@ -7,12 +7,12 @@
 	        <td width="398">admin</td>
 	      </tr>
 	      <tr>
-	        <td>Password *</td>
-	        <td><input type="password" name="password" id="password" /></td>
+	        <td id="passwordLabel">Password *</td>
+	        <td><input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password" id="password" /></td>
 	      </tr>
 	      <tr>
-	        <td>Confirm Password *</td>
-	        <td><input type="password" name="password_confirm" id="password_confirm" /></td>
+	        <td id="passwordConfirmLabel">Confirm Password *</td>
+	        <td><input onkeyup="TodoyuInstaller.validatePasswordRepetition()" type="password" name="password_confirm" id="password_confirm" /></td>
 	      </tr>
 	    </table>
 {/block}
